--- a/index.html
+++ b/index.html
@@ -12,6 +12,46 @@
         <h1>Simple JavaScript Quiz</h1>
         <p> Test your knowledge in <strong>JavaScript fundamentals</strong><p>
       </header>
+      <section>
+        <div id="results"></div>
+        <form name="quizForm" onsubmit="return submitAnswers">
+          <h3>1. In which HTML element do we put in JavaScript code?</h3>
+          <input type="radio" name="q1" value="a" id="q1a">a. &lt;js&gt;<br>
+          <input type="radio" name="q1" value="a" id="q1a">b. &lt;script&gt;<br>
+          <input type="radio" name="q1" value="a" id="q1a">c. &lt;body&gt;<br>
+          <input type="radio" name="q1" value="a" id="q1a">d. &lt;link&gt;<br>
+
+          <h3>2. Which HTML attribute is used to reference an external JavaScript file?</h3>
+          <input type="radio" name="q1" value="a" id="q1a">a. src<br>
+          <input type="radio" name="q1" value="a" id="q1a">b. rel<br>
+          <input type="radio" name="q1" value="a" id="q1a">c. type<br>
+          <input type="radio" name="q1" value="a" id="q1a">d. href<br>
+
+          <h3>3. How would you write "Hello" in an alert box?</h3>
+          <input type="radio" name="q1" value="a" id="q1a">a. msg("Hello")<br>
+          <input type="radio" name="q1" value="a" id="q1a">b. alertBox("Hello")<br>
+          <input type="radio" name="q1" value="a" id="q1a">c. document.write("Hello")<br>
+          <input type="radio" name="q1" value="a" id="q1a">d. alert("Hello")<br>
+
+          <h3>4. JavaScript is directly related to the "Java" programming language</h3>
+          <input type="radio" name="q1" value="a" id="q1a">a. True<br>
+          <input type="radio" name="q1" value="a" id="q1a">b. False<br>
+
+
+          <h3>5. A variable in JavaScript  must start with which special character?</h3>
+          <input type="radio" name="q1" value="a" id="q1a">a. @<br>
+          <input type="radio" name="q1" value="a" id="q1a">b. $<br>
+          <input type="radio" name="q1" value="a" id="q1a">c. #<br>
+          <input type="radio" name="q1" value="a" id="q1a">d. No Special Character<br>
+          <br><br>
+          <input type="submit" value="Submit Answers">
+          <section>
+            <footer>
+              <p> Copyright &copy; 2015, All Rights Reserved</p>
+          </section>
+        </form>
+      </section>
+
     </div>
   </body>
 </html>
